# dos-actors

./: .gitignore  .gitmodules  Cargo.toml  README.md  data-analysis.ipynb
actors/: Cargo.toml  README.md  gmt_dos-clients_transceiver_cert.der  gmt_dos-clients_transceiver_key.der
actors/dsl/: Cargo.toml  README.md
actors/dsl/examples/: demo.rs  dsl.rs
actors/dsl/src/: actorscript0.rs  client.rs  lib.rs  model.rs
actors/dsl/tests/: dsl.rs
actors/examples/: aco.merge.rs  bootstrapping.rs  decimation.rs  demo.rs  design.rs  integrator.rs  sh48.rs
actors/examples/atmosphere/: atmosphere.ipynb
actors/examples/dome_seeing/: dome_seeing.ipynb
actors/examples/lowpass/: main.rs
actors/examples/simple/: feedback.rs  filter.rs  logging.rs  main.rs  sampler.rs  signal.rs
actors/examples/simple_dsl/: feedback.rs  filter.rs  logging.rs  main.rs  sampler.rs  signal.rs
actors/examples/wind_loading/: main.rs
actors/examples/wind_loads/: main.rs
actors/examples/woofer-tweeter/: common.rs  main.rs  tweeter.rs  woofer.rs
actors/src/: actor.rs  aggregation.rs  client.rs  framework.rs  graph.rs  io.rs  lib.rs  macros.rs  model.rs  network.rs  render.rs  subsystem.rs  system.rs
actors/src/actor/: actor.rs  check.rs  io.rs  plain.rs  serde_with.rs  task.rs
actors/src/framework/: model.rs  network.rs
actors/src/graph/: render.rs
actors/src/io/: input.rs  output.rs
actors/src/model/: flowchart.rs  plain.rs  ready.rs  running.rs  subsystem.rs  task.rs  unknown.rs
actors/src/network/: inputs.rs  logs.rs  output_rx.rs  outputs.rs
actors/src/subsystem/: check.rs  flowchart.rs  gateway.rs  subsystem.rs  task.rs
actors/src/system/: check.rs  filing.rs  flowchart.rs  implementations.rs  interfaces.rs  task.rs
actors/tests/: setpoint_mount-m1-asm.rs  setpoint_mount-m1-m2-tt-sh48.rs  setpoint_mount-m1-m2.rs  setpoint_mount-m1-rbm.rs  setpoint_mount-m1sx.rs  zero_mount-m1-m2-tt.rs  zero_mount-m1.rs
actors/uid-derive/: Cargo.toml  README.md
actors/uid-derive/examples/: uid.rs
actors/uid-derive/src/: alias.rs  lib.rs  uid.rs
book/: Cargo.toml  Makefile  README.md  book.toml
book/examples/: actors-model.rs  aggregation.rs  common.rs  correctness.rs  feedback.rs  multirate.rs  persistence.rs  signals.rs
book/src/: Readme.md  SUMMARY.md  actor-model.dot  actors.md  client.md  gmt-actor-model.md  model.dot  model.md
book/src/clients/: multirate.md
book/src/gmt-actor-model/: gmt-actor-model.md
book/src/grim/: grim.md
book/tests/: correctness.rs
clients/: Cargo.toml  README.md
clients/arrow/: Cargo.toml  README.md
clients/arrow/src/: arrow.rs  lib.rs
clients/core/: Cargo.toml
clients/core/examples/: bootstrapping.rs  decimation.rs
clients/core/src/: average.rs  fill.rs  foh.rs  fun.rs  gain.rs  gif.rs  iir.rs  integrator.rs  leftright.rs  lib.rs  logging.rs  low_pass_filter.rs  multiplex.rs  once.rs  operator.rs  print.rs  pulse.rs  sampler.rs  select.rs  signals.rs  smooth.rs  timer.rs
clients/crseo/: Cargo.toml  README.md
clients/crseo/src/: calibration.rs  centroiding.rs  error.rs  lib.rs  ltao.rs  ngao.rs  optical_model.rs  processing.rs  pyramid.rs  sensor.rs  sensors.rs  shackhartmann.rs  wavefront_stats.rs
clients/crseo/tms/: Cargo.toml
clients/dcs/: Cargo.toml  README.md  setup.sh
clients/dcs/examples/: dcs.rs  im_traj.rs  pullpush.rs  tai.rs
clients/dcs/servos-scopes/: Cargo.toml
clients/dcs/src/: connector.rs  dcs.rs  dcs_data.rs  lib.rs  mount_trajectory.rs  pk_sys_types.rs
clients/domeseeing/: Cargo.toml  README.md
clients/domeseeing/analysis/: Cargo.toml  Dockerfile  Makefile  data-analysis.ipynb  domeseeing.yaml
clients/domeseeing/src/: lib.rs
clients/fem/: Cargo.toml  README.md  build.rs  mount_key.der  t
clients/fem/benches/: benchmarks.rs
clients/fem/builder/: Cargo.toml  README.md
clients/fem/examples/: dc-gain-mismatch.rs
clients/fem/fem-cuda-solver/: Cargo.toml  README.md  build.rs
clients/fem/mech/: Cargo.toml
clients/fem/server/: Cargo.toml  fem_key.der  mount_cert.der
clients/fem/src/: actors_interface.rs  bilinear.rs  cuda_solver.rs  discrete_modal_solver.rs  discrete_state_space.rs  exponential.rs  exponential_matrix.rs  impl_serde.rs  lib.rs  model.rs  solvers.rs
clients/interface/: Cargo.toml  README.md
clients/interface/src/: clients.rs  interface.rs  lib.rs
clients/io/: Cargo.toml  README.md  build.rs
clients/io/src/: assembly.rs  gmt_fem.rs  gmt_m1.rs  gmt_m2.rs  lib.rs  optics.rs
clients/lom/: Cargo.toml  README.md
clients/lom/src/: lib.rs  optical_sensitivity.rs
clients/m1-ctrl/: Cargo.toml  README.md
clients/m1-ctrl/examples/: step.rs
clients/m1-ctrl/src/: actuators.rs  assembly.rs  assembly_sys.rs  builder.rs  calibration.rs  fem.rs  hardpoints.rs  lib.rs  model.rs  segment_builder.rs  subsystems.rs
clients/m2-ctrl/: Cargo.toml  README.md  build.rs
clients/m2-ctrl/examples/: fsm.rs
clients/m2-ctrl/src/: actors_interface.rs  asm.rs  assembly.rs  assembly_sys.rs  (+7 more)
clients/mount/: Cargo.toml  README.md  build.rs  fem_cert.der
clients/scope/: Cargo.toml  README.md
clients/servos/: Cargo.toml  README.md  build.rs  setup.sh
clients/src/: average.rs  clients.rs  gain.rs  integrator.rs  interface.rs  lib.rs  logging.rs  sampler.rs  signals.rs  smooth.rs  timer.rs
clients/transceiver/: .gitignore  Cargo.toml  README.md  perf.data.old
clients/windloads/: Cargo.toml  README.md  cfd2025.md
demos/: Cargo.toml  build.rs  ltao_e2e_goal.drawio  ngao_im_e2e_diagrams.drawio
demos/src/: lib.rs  main.rs
grsim/active-optics/: Cargo.toml
grsim/asms/: Cargo.toml  README.md  asms-nodes.ipynb  asms.ipynb  mount-trfun.ipynb
grsim/ngao-opm/: Cargo.toml  Dockerfile  Makefile  README.md  ngao-opm.yaml  setup.sh
im-fsm/: Cargo.toml
im-fsm/src/: main.0.rs  main.backup.rs  main.rs
interface/: Cargo.toml  README.md
interface/benches/: main.rs
interface/src/: data.rs  filing.rs  gateway.rs  lib.rs  load.rs  select.rs  units.rs
interface/uid-derive/: Cargo.toml
uid/: Cargo.toml  README.md
uid-derive/: Cargo.toml
uid-derive/src/: lib.rs
uid/src/: lib.rs
(+599 files in other folders)
