[workspace]
members = [
    "clients/scope/client",
    "actors/dsl/examples/demo",
    "actors/dsl/examples/scope",
    "actors/dsl/examples/scopes",
    "clients/crseo/tms",
    "clients/lom",
    "book",
    "clients/fem/mech",
    "clients/fem/fem-cuda-solver",
    "clients/servos/edge-sensors",
    "clients/servos/edge-sensors/scopes",
    "clients/servos/edge-sensors/io",
    "demos",
    "clients/dcs",
    "clients/dcs/servos-scopes",  
]
resolver = "2"

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rconan/dos-actors"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace.dependencies]
gmt_dos-actors = { version = "11.1", path = "actors/" }
gmt_dos-clients = { version = "5.0", default-features = false, path = "clients/core" }
interface = { version = "1.3", path = "interface", package = "gmt_dos-actors-clients_interface" }
gmt-fem = { version = "5.1.1", path = "clients/fem/model" }
gmt-fem-code-builder = { version = "2.3", path = "clients/fem/builder" }
dos-uid-derive = { version = "5.0", path = "interface/uid-derive/" }
gmt_dos-clients_io = { version = "4.2", path = "clients/io" }
gmt_dos-clients_fem = { version = "5.1", path = "clients/fem/" }
gmt_dos-clients_mount = { version = "4.1", path = "clients/mount/" }
gmt_dos-clients_m1-ctrl = { version = "5.0", path = "clients/m1-ctrl/" }
gmt_dos-systems_m1 = { version = "0.1", path = "systems/m1/" }
gmt_dos-clients_m2-ctrl = { version = "4.0", path = "clients/m2-ctrl/" }
gmt_dos-systems_m2 = { version = "0.1", path = "systems/m2/" }
gmt_dos-clients_servos = { version = "3.0", default-features = false, path = "clients/servos/" }
gmt_dos-clients_arrow = { version = "2.1", path = "clients/arrow/" }
gmt_dos-clients_domeseeing = { version = "2.1", path = "clients/domeseeing/" }
gmt_dos-clients_windloads = { version = "2.2", path = "clients/windloads/" }
gmt_dos-clients_lom = { version = "1.2", path = "clients/lom/" }
gmt_dos-clients_crseo = { version = "4.3", path = "clients/crseo/" }
gmt_dos-clients_transceiver = { version = "2.0", path = "clients/transceiver" }
gmt_dos-clients_scope = { version = "3.1", path = "clients/scope" }
gmt_dos-clients_scope-client = { path = "clients/scope/client" }
log = "0.4.17"
thiserror = "1.0"
tokio-test = "0.4"
nalgebra = "0.33"
tokio = { version = "1.25.0" }
anyhow = "1.0.68"
crseo = { version = "2.2" }
rayon = "1.6.1"
env_logger = "0.11.1"
matio-rs = "1.3"
skyangle = "0.2.2"
nanorand = "0.7.0"
serde = { version = "1.0.160", features = ["derive", "rc"] }
bincode = "2.0.0-rc"
apache-arrow = { version = "30.0", package = "arrow" }
parquet = "30.0"
zip = "0.6.6"
bytes = "1.3.0"
indicatif = { version = "0.17.3" }
tracing = "0.1.37"
flume = "0.11.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
faer-ext = { version = "0.4.1", features = ["nalgebra"] }
faer = "0.20.2"

[profile.release]
lto = "thin"
