[package]
name = "gmt_dos-actors"
version = "6.0.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope Dynamic Optical Simulation Actor Model"
repository = "https://github.com/rconan/dos-actors"
documentation = "https://docs.rs/dos-actors"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
flume = "0.10.9"
futures = "0.3.19"
thiserror.workspace = true
async-trait = "0.1.52"
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "rt",
    "time",
] }
humantime = "2.1.0"
chrono = "0.4.19"
log = { workspace = true, features = ["release_max_level_info"] }
vec_box = "1.0.0"
gmt_dos-clients = { workspace = true, default-features = false, features = [
    "interface",
] }

[features]
sampler = []
feedback = []
dta = []
noise = []

[dev-dependencies]
rand = "0.8.4"
rand_distr = "0.4.3"
simple_logger = "2.1.0"
structopt = "0.3.26"
tokio-test.workspace = true
serde-pickle = "1.1.0"
env_logger.workspace = true
complot = "0.3.3"
ron = "0.8.0"
anyhow.workspace = true

# [[test]]
# name = "zero_mount-m1-rbm"
# required-features = [
#     "fem",
#     "mount-ctrl_s1000d002ze30",
#     "apache-arrow",
#     "lom",
#     "m1-ctrl",
# ]

# [[test]]
# name = "setpoint_mount-m1"
# required-features = ["fem", "mount-ctrl", "m1-ctrl"]

# [[test]]
# name = "setpoint_mount-m1-rbm"
# required-features = ["fem", "mount-ctrl", "m1-ctrl", "nalgebra"]

# [[test]]
# name = "zero_mount-m1-m2"
# required-features = [
#     "fem",
#     "mount-ctrl",
#     "apache-arrow",
#     "lom",
#     "m1-ctrl",
#     "fsm",
# ]

# [[test]]
# name = "setpoint_mount-m1-m2"
# required-features = ["fem", "mount-ctrl", "m1-ctrl", "fsm"]

# [[test]]
# name = "setpoint_mount-m1-asm"
# required-features = ["fem", "mount-ctrl/s8000d0005", "m1-ctrl", "asm"]

# [[test]]
# name = "setpoint_mount-m1-asm-pos"
# required-features = [
#     "fem",
#     "mount-ctrl_s8000d0005",
#     "m1-ctrl",
#     "asm",
#     "apache-arrow",
# ]

# [[test]]
# name = "zero_mount-m1-m2-tt"
# required-features = [
#     "fem",
#     "mount-ctrl",
#     "apache-arrow",
#     "lom",
#     "m1-ctrl",
#     "fsm",
#     "nalgebra",
# ]

# [[test]]
# name = "setpoint_mount-m1-m2-tt"
# required-features = [
#     "fem",
#     "mount-ctrl",
#     "apache-arrow",
#     "lom",
#     "m1-ctrl",
#     "fsm",
#     "ceo",
# ]

# [[example]]
# name = "wind_loading"
# required-features = ["fem", "mount-ctrl", "apache-arrow", "windloads"]
# [[example]]
# name = "wind_loads"
# required-features = ["fem", "apache-arrow", "windloads"]
# [[example]]
# name = "static_aberration"
# required-features = ["ceo", "apache-arrow"]
