[package]
name = "book-examples"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["clients", "noise"] }
nanorand.workspace = true
rand_distr = "0.4.3"
complot = "0.3.3"
env_logger.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
clap = { version = "4.1.6", features = ["derive"] }
