[package]
name = "gmt_dos-clients"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[workspace]
members = [
    "windloads",
    "crseo",
    "domeseeing",
    "arrow",
    "mount",
    "io",
    "m1-ctrl",
    "m2-ctrl",
    "fem",
    "crseo/tms",
]

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope Dynamic Optical Simulation Actor's client"
repository = "https://github.com/rconan/dos-actors"
documentation = "https://docs.rs/dos-actors"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace.dependencies]
gmt-fem = { version = "2.0.0", path = "../../fem" }
gmt_dos-actors = { path = "../" }
gmt_dos-clients = { path = "." }
gmt_dos-clients_io = { path = "io/" }
gmt_dos-clients_fem = { path = "fem/" }
gmt_dos-clients_mount = { path = "mount/" }
gmt_dos-clients_m1-ctrl = { path = "m1-ctrl/" }
gmt_dos-clients_arrow = { path = "arrow/" }
gmt_dos-clients_domeseeing = { path = "domeseeing/" }
gmt_dos-clients_crseo = { path = "crseo/" }
log = "0.4.17"
thiserror = "1.0.36"
tokio-test = "0.4.2"
nalgebra = "0.32.1"
tokio = { version = "1.25.0" }
anyhow = "1.0.68"
crseo = { version = "0.4.5", path = "../../crseo" }
rayon = "1.6.1"
env_logger = "0.10.0"
matio-rs = { version = "1.3.0", path = "../../matio-rs" }
skyangle = "0.2.2"

[dependencies]
thiserror.workspace = true
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
paris = { version = "1.5.13", optional = true }
log = { workspace = true, optional = true }
dos-uid-derive = { version = "2.0.0", path = "../uid-derive", optional = true }

[dev-dependencies]
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_mount = { workspace = true, features = ["s8000d002ze30"] }
gmt_dos-clients_m1-ctrl.workspace = true
gmt_dos-clients_fem.workspace = true
gmt_dos-clients_arrow.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
skyangle.workspace = true
gmt-fem.workspace = true
lom = { version = "1.1.0", package = "gmt-lom", features = ["main"] }

env_logger.workspace = true
matio-rs = { workspace = true, features = ["nalgebra"] }

[features]
default = ["clients"]
clients = ["interface"]
noise = ["rand", "rand_distr"]
interface = ["paris", "log", "dos-uid-derive"]
