[package]
name = "gmt_dos-clients"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
thiserror.workspace = true
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
paris = { version = "1.5.13", optional = true }
log = { workspace = true, optional = true }
dos-uid-derive = { workspace = true, optional = true }
matio-rs = { workspace = true, optional = true }

[dev-dependencies]
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_mount = { workspace = true, features = ["s8000d002ze30"] }
gmt_dos-clients_m1-ctrl.workspace = true
gmt_dos-clients_m2-ctrl.workspace = true
gmt_dos-clients_fem.workspace = true
gmt_dos-clients_arrow.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
skyangle.workspace = true
gmt-fem.workspace = true
lom = { version = "1.1.0", package = "gmt-lom", features = ["main"] }
env_logger.workspace = true
matio-rs = { workspace = true, features = ["nalgebra"] }
nanorand.workspace = true

[features]
default = ["clients"]
clients = ["interface"]
noise = ["rand", "rand_distr"]
interface = ["paris", "log", "dos-uid-derive"]
