[package]
name = "demos"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
gmt-fem.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_fem.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_lom.workspace = true
gmt_dos-clients_mount = { workspace = true, features = ["s8000d002ze30"] }
gmt_dos-clients_scope = { workspace = true, features = ["server"] }
gmt_dos-clients_scope-client.workspace = true
interface.workspace = true
skyangle.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
