[package]
name = "demos"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
gmt-fem.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients.workspace = true
gmt_dos-clients_arrow = { workspace = true, optional = true }
gmt_dos-clients_fem.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_lom.workspace = true
gmt_dos-clients_m1-ctrl.workspace = true
gmt_dos-clients_m2-ctrl.workspace = true
gmt_dos-clients_mount.workspace = true
gmt_dos-clients_scope = { workspace = true, features = ["server"] }
gmt_dos-clients_scope-client.workspace = true
gmt_dos-clients_servos.workspace = true
gmt_dos-clients_windloads.workspace = true
gmt_dos-systems_m1.workspace = true
gmt_dos-systems_m2.workspace = true
interface.workspace = true
skyangle.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
cuda = ["gmt_dos-clients_fem/cuda", "gmt_dos-clients_servos/cuda"]
