[package]
name = "im-fsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
dos-actors = { path = "..", features = ["fem", "windloads", "apache-arrow", "mount-ctrl", "m1-ctrl", "fsm", "crseo", "nalgebra"]}
fem = { version = "0.2.4", package = "gmt-fem" }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread", "sync","rt","time"] }
parse-monitors = { git = "https://github.com/rconan/parse-monitors.git", branch = "main"}
lom = { version = "0.1.6", package = "gmt-lom", features = ["apache"]}
complot = "0.3.2"
skyangle = "0.1.2"
nalgebra = "0.30.1"
crseo = { path = "../../crseo/" }
m1-ctrl = { git = "https://github.com/rconan/m1-ctrl.git", branch = "hf_design"}
fsm = { git = "https://github.com/rodrigo-romano/m2-ctrl-code.git", branch = "2022-03-update" }
bincode = "1.3.3"
linya = "0.2.2"
env_logger = "0.9.0"
