[package]
name = "gmt_dos-actors-clients_interface"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dos-uid-derive = "3.0.0"
log.workspace = true
paris = "1.5.15"
