[package]
name = "gmt_dos-actors-clients_interface"
version = "1.3.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Giant Magellan Telescope Dynamic Optical Simulation Actor to Clients Interface"
documentation = "https://docs.rs/gmt_dos-actors-clients_interface"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
dos-uid-derive.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }
paris = "1.5.15"
thiserror.workspace = true
bincode = { workspace = true, optional = true }

[features]
filing = ["serde", "bincode/serde"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "main"
harness = false

[package.metadata.docs.rs]
all-features = true
