[package]
name = "dos-uid-derive"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "dos-actors UniqueIdentifier derive macro"
repository = "https://github.com/rconan/dos-actors/uid-derive"
documentation = "https://docs.rs/dos-uid-derive"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
proc-macro2 = "1.0.38"
quote = "1.0.18"
syn = "1.0.99"

[lib]
proc-macro = true
