[package]
name = "dos-uid"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "dos-actors UniqueIdentifier trait"
repository = "https://github.com/rconan/dos-actors/uid"
documentation = "https://docs.rs/dos-uid"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dev-dependencies]
uid-derive = { version = "0.2.0", package = "dos-uid-derive" }
