[package]
name = "dos-uid"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "dos-actors UniqueIdentifier trait"
repository = "https://github.com/rconan/dos-actors/uid"
documentation = "https://docs.rs/dos-uid"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
uid-derive = { version = "0.3.1", package = "dos-uid-derive", path = "../uid-derive" }
