[package]
name = "gmt_dos-actors_dsl"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Actors Domain Specific Language"
documentation = "https://docs.rs/gmt_dos-clients_scope-macros"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["full"] }
tracing.workspace = true

[lib]
proc-macro = true

[dev-dependencies]
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, default-features = true }
gmt_dos-clients_arrow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
