[package]
name = "gmt_dos-actors_dsl"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Actors Domain Specific Language"
documentation = "https://docs.rs/gmt_dos-clients_scope-macros"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tracing.workspace = true

[lib]
proc-macro = true
