[package]
name = "gmt_dos-actors_dsl"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Actors Domain Specific Language"
documentation = "https://docs.rs/gmt_dos-actors_dsl"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
prettyplease = "0.2.15"
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tracing.workspace = true

[lib]
proc-macro = true
