[package]
name = "dos-uid-derive"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "dos-actors UniqueIdentifier derive macro"
repository = "https://github.com/rconan/dos-actors/uid-derive"
documentation = "https://docs.rs/dos-uid-derive"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["full", "extra-traits"] }

[lib]
proc-macro = true

[dev-dependencies]
gmt_dos-clients = { workspace = true, default-features = false, features = [
    "interface",
] }
