[package]
name = "gmt_dos-clients_arrow"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Arrow Client"
documentation = "https://docs.rs/gmt_dos-clients_arrow"
readme = "../README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_dos-clients = { workspace = true, features = ["interface"] }
log = { workspace = true }
apache-arrow = { version = "30.0", package = "arrow" }
gmt_dos-actors.workspace = true
matio-rs = { workspace = true, optional = true }
parquet = "30.0"
paste = "1.0.9"
thiserror.workspace = true

[dev-dependencies]
tokio-test.workspace = true
