[package]
name = "gmt_dos-clients_arrow"
version = "1.0.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS Arrow Client"
documentation = "https://docs.rs/gmt_dos-clients_arrow"
readme = "../README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gmt_dos-clients = { workspace = true, features = ["interface"] }
log = { workspace = true }
apache-arrow.workspace = true
gmt_dos-actors.workspace = true
matio-rs = { workspace = true, optional = true }
parquet.workspace = true
paste = "1.0.9"
thiserror.workspace = true
regex = "1.8.1"

[dev-dependencies]
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["clients"] }
tokio-test.workspace = true

[package.metadata.docs.rs]
all-features = true
