[package]
name = "gmt_dos-clients"
version = "4.4.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Giant Magellan Telescope Dynamic Optical Simulation Actor Clients"
documentation = "https://docs.rs/gmt_dos-clients"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
interface.workspace = true
indicatif = { workspace = true }
thiserror.workspace = true
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
log = { workspace = true, optional = true }
matio-rs = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true }
num-traits = { version = "0.2.15", optional = true }
bincode = { workspace = true, optional = true }
gif = "0.13.1"
colorous = "1.0.14"

[features]
noise = ["rand", "rand_distr"]
nalgebra = ["dep:nalgebra", "num-traits"]
serde = ["dep:serde"]

[dev-dependencies]
gmt_dos-actors.workspace = true
tokio.workspace = true
