[package]
name = "gmt_dos-clients"
version = "4.4.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Giant Magellan Telescope Dynamic Optical Simulation Actor Clients"
documentation = "https://docs.rs/gmt_dos-clients"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
interface.workspace = true
indicatif = { workspace = true }
thiserror.workspace = true
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
log = { workspace = true, optional = true }
matio-rs = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true }
num-traits = { version = "0.2.15", optional = true }
bincode = { workspace = true, optional = true }
gif = {version = "0.13.1", optional = true}
colorous = {version = "1.0.14", optional = true}
imageproc = {version = "0.25.0", optional = true}
image = {version = "0.25.4", optional = true}
ab_glyph = {version = "0.2.29", optional = true}

[features]
noise = ["rand", "rand_distr"]
nalgebra = ["dep:nalgebra", "num-traits"]
serde = ["dep:serde"]
gif = ["dep:gif", "colorous", "image", "imageproc", "ab_glyph"]

[package.metadata.docs.rs]
all-features = true
