[package]
name = "gmt_dos-clients_crseo"
version = "4.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS CRSEO Client"
documentation = "https://docs.rs/gmt_dos-clients_crseo"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
interface.workspace = true
gmt_dos-clients_io.workspace = true
gmt_dos-clients_domeseeing.workspace = true
log.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
crseo.workspace = true
serde = { version = "1.0.152", features = ["derive"] }
anyhow.workspace = true
toml = "0.8.8"
indicatif = { workspace = true, features = ["rayon"] }
rayon.workspace = true
faer = { version = "0.16.0", optional = true, features = ["nalgebra"] }
bincode = { workspace = true, features = ["serde"] }

[dev-dependencies]
gmt_dos-clients_arrow.workspace = true
linya = "0.3.0"
skyangle = "0.2.2"
tokio = "1.21.1"
