[package]
name = "gmt_dos-clients_crseo"
version = "4.3.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT DOS CRSEO Client"
documentation = "https://docs.rs/gmt_dos-clients_crseo"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
interface = { workspace = true, features = ["filing"] }
gmt_dos-clients_io = { workspace = true, features = ["crseo"] }
gmt_dos-clients_domeseeing.workspace = true
log.workspace = true
nalgebra = { workspace = true, features = ["serde-serialize"] }
thiserror.workspace = true
crseo.workspace = true
serde = { version = "1.0.152", features = ["derive", "rc"] }
anyhow.workspace = true
toml = "0.8.8"
indicatif = { workspace = true, features = ["rayon"] }
rayon.workspace = true
faer = { version = "0.20.2", optional = true }
bincode = { workspace = true, features = ["serde"] }
faer-ext = { version = "0.4.1", features = ["nalgebra"] }
skyangle = "0.2.2"
geotrans = {git = "https://github.com/rconan/geotrans.git", branch = "main"}

[dev-dependencies]
complot = "0.3.4"
gmt_dos-clients_arrow.workspace = true
linya = "0.3.0"
serde-pickle = "1.1.1"
skyangle = "0.2.2"
tokio = "1.21.1"

[features]
default = ["faer"]
