[package]
name = "gmt_dos-clients_dcs"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
gmt_dos-actors.workspace = true
gmt_dos-clients = { workspace = true, features = ["nalgebra"] }
gmt_dos-clients_arrow.workspace = true
gmt_dos-clients_fem = { workspace = true, features = ["serde"] }
gmt_dos-clients_io.workspace = true
gmt_dos-clients_mount.workspace = true
gmt_dos-clients_scope = { workspace = true, features = ["server"] }
gmt_dos-clients_scope-client.workspace = true
interface.workspace = true
log.workspace = true
nanomsg = "0.7.2"
rmp-serde = "1.3.0"
serde = { workspace = true, features = ["derive"] }
tai-time = { version = "0.3.3", features = ["tai_clock"] }
thiserror.workspace = true
tokio.workspace = true
